<resources>
    <string name="app_label">RLS</string>
    <string name="app_name">Reef Life Survey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="del_favorite_sites">Clear favorite survey sites</string>
    <string name="del_favorite_species">Clear favorite species</string>
    <string name="transition_search_back">transition_search_back</string>
    <string name="path_search">M13.3843083,13.3956843 C11.233862,15.5399983 7.7581039,15.5381046 5.61000013,13.3900003 C3.46000004,11.2399998 3.46000004,7.76000023 5.61000013,5.61000013 C7.76000023,3.46000004 11.2400007,3.46000004 13.3900003,5.61000013 C15.54,7.76000023 15.5400009,11.2400007 13.3900003,13.3900003 C13.388104,13.3918967 13.3862067,13.3937913 13.3843083,13.3956843 C15.1427975,15.1834093 19.6826174,19.798706 19.6826172,19.7987061 L13.3843085,13.3956846 L13.3843083,13.3956843 Z</string>
    <string name="transition_launch_details">transition_launch_details</string>
    <string name="bottom_sheet_total_surveys">%1$d surveys in %2$d dive sites</string>
    <string name="bottom_sheet_secondary_button_browse">Browse</string>
    <string name="bottom_sheet_secondary_button_map">Map</string>
    <string name="no_downloaded_sites_to_delete_message">No saved sites to clear</string>

    <!--About this app-->
    <string name="about_rls"> The Reef Life Survey Foundation (RLS) is a non-profit environmental organisation that makes the underwater world visible – to scientists, governments, artists and anyone with an interest in rocky and coral reefs around the world and how these reefs are changing.</string>
    <string name="website_launch_url">https://reeflifesurvey.com/</string>
    <string name="website_launch_support_url">https://reeflifesurvey.com/how-to/</string>

    <string name="about_app_pitch">Support the Reef Life Survey Foundation </string>
    <string name="donation_launch_url"><![CDATA[https://www.paypal.com/donate/?token=NDJj6GNLXR-F-03Ob9TBTaS6eiHfY7pqIjYJURagwDJQPvNZ6R_ADGkhs1Bz_k1lMJOfzG&country.x=AU&locale.x=AU]]></string>
    <string name="about_app_creation">This app was created by Jason Ludden and has been released as fully open-source on Github.</string>
    <!--TODO-->
    <string name="github_launch_url">https://github.com/jludden?tab=repositories</string>
    <string name="launch_website">Learn more at reeflifesurvey.com</string>
    <string name="rls_methodology_1">Reef Life Survey relies on the skills and dedication of recreational SCUBA divers using the same detailed methodology to record the abundance of all conspicuous species observed on reefs. Since 2008, this RLS methodology has been used to survey over 3000 reefs across more than 50 countries spanning every continent in the world (including Antarctica!).</string>
    <string name="rls_methodology_2">Working collaboratively with government and management agencies, professional scientists and recreational divers, RLS aims to use this high-quality temporal and spatial information on the condition of reefs to improve biodiversity conservation and the sustainable management of marine resources.</string>


    <!--Strings for AboutLibraries lib-->
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text"><![CDATA[<font color="#f2f2f2">This application would not be possible without the following Android libraries. In addition, special thanks to Nick Butcher and the Plaid application, as well as Google Android Architecture Blueprints</font>]]></string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="del_favorite_sites_message">Delete all favorited sites?</string>
    <string name="del_favorite_species_message">Delete all favorited species?</string>
    <string name="del_downloaded_sites_message">Delete all downloaded sites?</string>
    <string name="del_offline_sites">Delete downloaded sites</string>
    <string name="clear_offline_sites_final_prompt_with_path">Are you sure you want to delete %1$d images found in %2$s?</string>
    <string name="clear_offline_sites_final_prompt">Are you sure you want to delete %1$d images?</string>
    <string name="notification_download_starting">Downloading… (%1$d species)</string>
    <string name="notification_download_complete">Download complete (%1$d images of %2$d species)</string>
    <string name="storage_location_dialog_title">Choose storage location</string>
    <string name="storage_location_dialog_internal_loc">Internal</string>
    <string name="storage_location_dialog_external_loc">SD Card</string>
    <string name="storage_location_dialog_space_remaining_message">%1$d MB available for RLS application</string>
    <string name="toolbar_button_quiz">Quiz</string>
    <string name="toolbar_button_download_offline">Download</string>
    <string name="toolbar_button_favorites_filter">Favorites</string>
    <string name="scientific_name_label">Scientific Name</string>
    <string name="common_names_label">Common Names</string>
    <string name="launch_in_website">Open in browser</string>
    <string name="image_primary_content_description">image of the fish</string>
    <string name="species_favorite_button">add species to favorites</string>
    <string name="about_app">About App</string>
    <string name="delete_offline_on_success">Images deleted</string>
    <string name="new_favorited_site">Added to site list</string>
    <string name="button_home_select_reefs">Reefs</string>
    <string name="button_home_browse_species">Species</string>
    <string name="no_internet_detected">No internet detected</string>
    <string name="unable_connect_google_maps">Unable to connect to Google Maps</string>
    <string name="site_already_added">%1$s is already in the site list</string>
    <string name="site_removed">Removed</string>
    <string name="select_a_site">Select a location to add it to the list</string>
    <string name="search_view_max_items_displayed">More results not shown</string>
    <string name="action_fullscreen">fullscreen</string>


</resources>
