<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--instead of using the standard search widget, im launching an activity-->
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="always"/>

    <!--<item android:id="@+id/action_search"-->
        <!--android:title="@string/action_search"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item android:id="@+id/settings_opt_del_favorite_sites"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="never"
        android:title="@string/del_favorite_sites"/>

<!--    <item android:id="@+id/settings_opt_del_favorite_species"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="never"
        android:title="@string/del_favorite_species"/>-->

    <item android:id="@+id/settings_opt_del_offline_sites"
        android:icon="@drawable/ic_store_offline"
        app:showAsAction="never"
        android:title="@string/del_offline_sites"/>

    <item android:id="@+id/settings_opt_about"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="never"
        android:title="@string/about_app" />
</menu>
