<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_rls_methodology"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_method_image_1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/rls_methodology_1"/>

        <ImageView
            android:id="@+id/about_method_image_2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/rls_methodology_2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/about_button_launch_website"
            android:text="@string/launch_website"/>

    </LinearLayout>

</ScrollView>